hphp/hack/test/typecheck/neg_enum.php.rust_elab.exp
File "neg_enum.php", line 3, characters 6-7:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "neg_enum.php", line 7, characters 6-7:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
